2009-07-16  Kent Tamura  <tkent@chromium.org>

        Reviewed by Eric Seidel.

        A test for for non-multipart file upload form submission.
        <https://bugs.webkit.org/show_bug.cgi?id=26505>

        * fast/forms/get-file-upload-expected.txt: Added.
        * fast/forms/get-file-upload.html: Added.

2009-07-15  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Fisher.

        Add tests for isolated worlds
        https://bugs.webkit.org/show_bug.cgi?id=27331

        These tests are currently disabled on JSC ports.

        * http/tests/security/isolatedWorld/all-window-properties-expected.txt: Added.
        * http/tests/security/isolatedWorld/all-window-properties.html: Added.
        * http/tests/security/isolatedWorld/all-window-prototypes-expected.txt: Added.
        * http/tests/security/isolatedWorld/all-window-prototypes.html: Added.
        * http/tests/security/isolatedWorld/body-properties-expected.txt: Added.
        * http/tests/security/isolatedWorld/body-properties.html: Added.
        * http/tests/security/isolatedWorld/body-prototype-expected.txt: Added.
        * http/tests/security/isolatedWorld/body-prototype.html: Added.
        * http/tests/security/isolatedWorld/document-properties-expected.txt: Added.
        * http/tests/security/isolatedWorld/document-properties.html: Added.
        * http/tests/security/isolatedWorld/document-prototype-expected.txt: Added.
        * http/tests/security/isolatedWorld/document-prototype.html: Added.
        * http/tests/security/isolatedWorld/global-variables-expected.txt: Added.
        * http/tests/security/isolatedWorld/global-variables.html: Added.
        * http/tests/security/isolatedWorld/image-properties-expected.txt: Added.
        * http/tests/security/isolatedWorld/image-properties.html: Added.
        * http/tests/security/isolatedWorld/image-prototype-expected.txt: Added.
        * http/tests/security/isolatedWorld/image-prototype.html: Added.