@@ -1,0 +1,26 @@
+<html>
+<head>
+<style>
+.floatblock {
+  overflow:hidden;
+  float:left;
+  background-color:black;
+  position:relative;
+  margin:5px;
+  right:50%;
+}
+</style>
+</head>
+<body>
+<div>
+The six boxes below should be centered in two rows of three.
+</div>
+<div style="float:left; position:relative; left:50%">
+<div class="floatblock"><img width=200 height=200></div>
+<div class="floatblock"><img width=200 height=200></div>
+<div class="floatblock"><img width=200 height=200></div>
+<br>
+<div class="floatblock"><img width=200 height=200></div>
+<div class="floatblock"><img width=200 height=200></div>
+<div class="floatblock"><img width=200 height=200></div>
+</div>
