@@ -1,3 +1,15 @@
+2009-07-16  David Hyatt  <hyatt@apple.com>
+
+        Reviewed by Beth Dakin.
+
+        https://bugs.webkit.org/show_bug.cgi?id=27353
+        Images mispositioned because of bug in percentage-based relative positioning.
+
+        Added fast/css/nested-floating-relative-position-percentages.html
+
+        * rendering/RenderBoxModelObject.cpp:
+        (WebCore::RenderBoxModelObject::relativePositionOffsetX):
+
 2009-07-16  Kent Tamura  <tkent@chromium.org>
 
         Reviewed by Eric Seidel.
